# skel

./: .coafile  .gitignore  LICENCE  README.rst  pyproject.toml  sonar-project.properties
.circleci/: config.yml
tests/: test_temporary.py
