[tool.poetry]
name = "skel"
version = "0.1.0"
description = "Asynchronous web framework"
authors = ["Aissaoui Anouar <anouar.aissaoui@backmarket.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^6.6"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
coala-bears = "^0.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
